Fix Bugs Policies On Task & Comments Models
